Replace Collection with List